      for detecting private cmake file.
      (Closes: #785329).
    + [BR] Detect package shipping apt_preferences(5) file.
      (Closes: #786533).
    + [BR] Detect package shipping oui or iab ieee database.
    + [NT] Add a check for packages without intermediate
      directories.
    + [BR] Avoid a false positive in jsom for defaultpresets.xml
      from openmapstreet.
  * checks/manpages.{desc,pm}:
    + [NT] Retire the hyphen-used-as-minus-sign tag as upstream now
      renders both "-" and "\-" as HYPHEN-MINUS.  (Closes: #785353)
  * checks/po-debconf.pm:
    + [JW] Use TMPDIR rather than TEMPDIR for temporary files.
      (Closes: #787930)
  * checks/source-copyright.pm:
    + [NT] Apply patch from Evgeni Golov to permit multiple
      different "public-domain licenses", as they are expected to
      describe what something is in public domain.
      (Closes: #787248)

  * collection/{debfiles,doc-base-files,init.d,menu-files}{,.desc}:
    + [NT] Remove deprecated and unused collections.  These were
      deprecated in 2.5.28.  Note that debfiles was omitted in the
      deprecation list by mistake in the original 2.5.28 release.
  * collection/unpacked:
    + [NT] Apply patch from Tomasz Buchert to extract the full time
      in UTC.

  * commands/reporting-sync-state.pm:
    + [NT] Read mirror files as UTF-8 files to avoid mojibake in
      maintainer names.  Once again, thanks to Andreas Rönnquist
      for the report.

  * data/cruft/non-free-license:
    + [BR] Detect autogenerated gperf data.  (Closes: #762179).
  * data/cruft/missing-dir-search-path
    + [BR] Fix a false positive in fspy for source-is-missing.
  * data/debhelper/*:
    + [NT] Refresh against unstable to pick up the rename of
      libaqbanking-dev.  Thanks to Micha Lenk for the reminder.
      (Closes: #787937)
  * data/fields/archive-sections:
    + [NT] Pre-emptively support the "debugsym" section, which is
      expected to be used by debhelper for "ddebs".